--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,3 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+button {
+    width: 150px;
+    height: 40px;
+    text-align: center;
+    background-color: lightblue;
+}
+
+.active {
+    font-size: 20px;
+    color: red;
+    
+}
