feat(sass): add btns components, fonst, variables, base and helpers styles

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,6 @@
 @import './general/base';
 @import './general/variables';
-
+@import './general/base';
+@import './general/typography';
+@import './components/ui.scss';
+@import './helpers/classes';
